--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
               <figure class="fillbg" style="background-image: url('heads/james.png')"></figure>
               <div class="card-body">
                 <h2 class="card-title">James Xiao</h2>
-                <p>Co-Founder, Co-CEO, Board Member</p>
+                <p>Co-Founder, Co-President, Board Member</p>
                 <button class="btn" onclick="james_bio.showModal()">Read More</button>
                 <dialog id="james_bio" class="modal">
                   <form method="dialog" class="modal-box">
                     <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
                     <h3 class="font-bold text-lg">James Xiao</h3>
-                    <p class="py-4">Hi! My name is James Xiao and I am one of the founders, CEO, and member of the board of directors here at the Junior Birding Society. I manage the operations and ensure we pursue our ultimate goal of spreading the love of birds to students around the world. My first foray into birding was in 7th grade of middle school, where I discovered the activity. Since then, birding has inspired me to ask scientific questions and to perform meaningful research. I have performed award winning research on the effects of Metabolites on Colorectal Cancer and plan to keep researching for as long as I live.</p>
+                    <p class="py-4">Hi! My name is James Xiao and I am one of the founders, Presidents, and member of the board of directors here at the Junior Birding Society. I manage the operations and ensure we pursue our ultimate goal of spreading the love of birds to students around the world. My first foray into birding was in 7th grade of middle school, where I discovered the activity. Since then, birding has inspired me to ask scientific questions and to perform meaningful research. I have performed award winning research on the effects of Metabolites on Colorectal Cancer and plan to keep researching for as long as I live.</p>
               
                   </form>
                   <form method="dialog" class="modal-backdrop">
@@ -161,13 +161,13 @@
               <figure class="fillbg" style="background-image: url('heads/anish.png')"></figure>
               <div class="card-body">
                 <h2 class="card-title">Anish Ramachandruni</h2>
-                <p>Co-Founder, Co-CEO, Board Member</p>
+                <p>Co-Founder, Co-President, Board Member</p>
                 <button class="btn" onclick="anish_bio.showModal()">Read More</button>
                 <dialog id="anish_bio" class="modal">
                   <form method="dialog" class="modal-box">
                     <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
                     <h3 class="font-bold text-lg">Anish Ramachandruni</h3>
-                    <p class="py-4">Hello! My name is Anish Ramachandruni and I am one of the founders, CEOs, and members of the board of directors at the Junior Birding Society. I manage the operations, help organize events, and I help ensure we pursue our ultimate goal of spreading the love and passion of birds to the youth around the world. My first introduction into birding was in 8th grade when I was stumped in art class and an idea of drawing a bird led me to discover the wonderful and vivid world of birds.This inspired my hobby of Birding, and Birding as a whole helped me express my art in new and vivid forms and it helped me develop a passion for scientific inquiry.</p>
+                    <p class="py-4">Hello! My name is Anish Ramachandruni and I am one of the founders, Presidents, and members of the board of directors at the Junior Birding Society. I manage the operations, help organize events, and I help ensure we pursue our ultimate goal of spreading the love and passion of birds to the youth around the world. My first introduction into birding was in 8th grade when I was stumped in art class and an idea of drawing a bird led me to discover the wonderful and vivid world of birds.This inspired my hobby of Birding, and Birding as a whole helped me express my art in new and vivid forms and it helped me develop a passion for scientific inquiry.</p>
               
                   </form>
                   <form method="dialog" class="modal-backdrop">
