more sections, become a member

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
           <h1 class="text-5xl font-bold">Junior Birding Society</h1>
           <p class="py-6">Where Young Minds Take Flight
           </p>
-          <a href="#info" onclick="lenis.scrollTo('#info')"><button class="btn btn-neutral">Learn More</button></a>
+          <a href="#info" onclick="lenis.scrollTo('#info')"><button class="btn">Learn More</button></a>
+          <button class="btn btn-neutral" onclick="member_form.showModal()">Become a Member</button>
         </div>
       </div>
     </div>
@@ -60,6 +61,18 @@
       </div>
     </div>
 
+    <div class="hero min-h-screen bg-base-100" id="info">
+      <div class="hero-content flex-col lg:flex-row animate__animated animate__zoomInDown" style="justify-content: space-around; width: 100%; text-align:center;">
+        <div>
+          <h1 class="text-5xl font-bold">Why Support the JBS</h1>
+          <p class="py-6">The Junior Birding Society plays a key role in bridging the gap between the youth and birding. A study in the prestigious journal Nature titled, “Initial Involvement into birding: triggers, gender, and decade effects-a mixed-methods study” analyzed statistics regarding the ages of birders. Birders typically begin bird watching at the age of 23, with an average age of 46 among avid birders. Our goal is to make birding more accessible to elementary and middle school students by breaking down the walls that make birding so inaccessible: a steep learning curve and a lack of exposure. We plan to use resources such as Merlin and eBird to increase the accessibility and engagement in birding. Through our outreach programs and events, we are trying to give students the opportunity to see the world through the lens of both a birder and a scientist.
+            <br><br>
+            <b>We want to inspire a whole new generation of birders and scientists.</b>           
+          </p>
+        </div>
+      </div>
+    </div>
+
 
     
     <div class="hero min-h-screen bg-base-100 pt-16">
@@ -67,7 +80,7 @@
         <div>
           <h1 class="text-5xl font-bold">What We Do</h1><br>
           <p>We host a variety of different events to get as many people interested in birding as possible.</p>
-          
+          <br>
           <div class=" grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4" style="text-align: left;">
             <div class="card container bg-base-100 shadow-xl" style="width: 45vh;">
               <figure class="fillbg figure2" style="background-image: url('https://s3.amazonaws.com/visit-pittsburgh/CMS/National-Aviary_Flock-of-American-Flamingos-in-Wetlands_2022_Elliott-Cramer.jpg')"></figure>
@@ -195,6 +208,29 @@
                 </dialog>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="hero min-h-screen bg-base-100 pt-16" id="contact">
+      <div class="hero-content text-center">
+        <div>
+          <h1 class="text-5xl font-bold">Become a member!</h1>
+          <p class="text-md py-6">It is completely free to become a member of the Junior Birding Society! By removing the financial barrier surrounding birding, we ensure that every student, regardless of their financial situation, has an equal opportunity to pursue birding. We believe that every student should have the chance to chase their passions. As a member, you can get access to exclusive birding opportunities and events. Join us as a member of the JBS!
+          </p>
+          <div class="flex flex-col lg:flex-row justify-center items-center gap-4">
+            <button class="btn btn-neutral" onclick="member_form.showModal()">Become a Member</button>
+            <dialog id="member_form" class="modal">
+              <form method="dialog" class="modal-box">
+                <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
+                <h3 class="font-bold text-lg">Become a Member</h3>
+                <iframe data-tally-src="https://tally.so/embed/3qaxqk?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="1527" frameborder="0" marginheight="0" marginwidth="0" title="JBS Member Registration Form"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
+              </form>
+              <form method="dialog" class="modal-backdrop">
+                <button>close</button>
+              </form>
+            </dialog>
           </div>
         </div>
       </div>
