reduced height for some sections

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </div>
 
-    <div class="hero min-h-screen bg-base-100" id="info">
+    <div class="hero bg-base-100" id="info" style="min-height: 60vh;">
       <div class="hero-content flex-col lg:flex-row animate__animated animate__zoomInDown" style="justify-content: center; width: 100%; text-align:center;">
         <div>
           <h1 class="text-5xl font-bold">Mission Statement</h1>
@@ -61,7 +61,7 @@
       </div>
     </div>
 
-    <div class="hero min-h-screen bg-base-100" id="info">
+    <div class="hero bg-base-100" style="min-height: 60vh;">
       <div class="hero-content flex-col lg:flex-row animate__animated animate__zoomInDown" style="justify-content: space-around; width: 100%; text-align:center;">
         <div>
           <h1 class="text-5xl font-bold">Why Support the JBS</h1>
@@ -136,7 +136,7 @@
       </div>
     </div>
 
-    <div class="hero min-h-screen bg-base-100 pt-16" id="sponsors">
+    <div class="hero bg-base-100 pt-16" id="sponsors"  style="min-height: 60vh;">
       <div class="hero-content text-center">
         <div>
           <h1 class="text-5xl font-bold">Sponsors</h1><br>
@@ -213,7 +213,7 @@
       </div>
     </div>
 
-    <div class="hero min-h-screen bg-base-100 pt-16" id="contact">
+    <div class="hero bg-base-100 pt-16" id="contact"  style="min-height: 60vh;">
       <div class="hero-content text-center">
         <div>
           <h1 class="text-5xl font-bold">Become a member!</h1>
@@ -236,7 +236,7 @@
       </div>
     </div>
 
-    <div class="hero min-h-screen bg-base-100 pt-16" id="contact">
+    <div class="hero bg-base-100 pt-16" id="contact"  style="min-height: 60vh;">
       <div class="hero-content text-center">
         <div>
           <h1 class="text-5xl font-bold">Contact</h1>
