--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
 </head>
 
 <body>
+  <div class="bg"></div>
   <div class="navbar bg-base-100" style="position: fixed; top: 0; z-index: 999;">
     <div class="flex-1">
       <a class="btn btn-ghost normal-case text-xl" href="#" onclick="lenis.scrollTo('#')">Junior Birding Society</a>
     </div>
     <div class="flex-none">
       <ul class="menu menu-horizontal px-1">
-        <li><a href="#info" onclick="lenis.scrollTo('#info')">Events</a></li>
+        <li><a href="#info" onclick="lenis.scrollTo('#info')">Info</a></li>
+        <li><a href="#events" onclick="lenis.scrollTo('#events')">Events</a></li>
         <li><a href="#schedule" onclick="lenis.scrollTo('#sponsors')">Sponsors</a></li>
         <li><a href="#about" onclick="lenis.scrollTo('#about')">About</a></li>
         <li><a href="#contact" onclick="lenis.scrollTo('#contact')">Contact</a></li>
@@ -40,30 +42,32 @@
   
     <div class="hero min-h-screen bg-base-100">
       <div class="hero-content flex-col lg:flex-row animate__animated animate__zoomInDown" style="justify-content: space-around; width: 100%;">
-        <img src="logo.png" class="max-w-xs rounded-lg" />
+        <img src="logo_dark.png" class="max-w-xs rounded-lg" />
         <div class="max-w-lg">
           <h1 class="text-5xl font-bold">Junior Birding Society</h1>
           <p class="py-6">Where Young Minds Take Flight
           </p>
-          <a href="#info" onclick="lenis.scrollTo('#info')"><button class="btn">Learn More</button></a>
-          <button class="btn btn-neutral" onclick="member_form.showModal()">Become a Member</button>
+          <a href="#info" onclick="lenis.scrollTo('#info')"><button class="btn btn-secondary">Learn More</button></a>
+          <button class="btn btn-primary" onclick="member_form.showModal()">Become a Member</button>
         </div>
       </div>
     </div>
 
-    <div class="hero bg-base-100" id="info" style="min-height: 60vh;">
-      <div class="hero-content flex-col lg:flex-row animate__animated animate__zoomInDown" style="justify-content: center; width: 100%; text-align:center;">
-        <div>
+    <div class="hero bg-base-100" id="info" style="min-height: 75vh;">
+      <div class="hero-content flex-col lg:flex-row" style="justify-content: center; width: 100%; text-align:center;">
+        <div class="slideInRight">
           <h1 class="text-5xl font-bold">Mission Statement</h1>
           <p class="py-6 text-xl">The <b>Junior Birding Society</b> seeks to <b>ignite a lifelong love of birds</b> in elementary and middle school students and to <b>spark a passion for scientific inquiry</b> through engaging school outreach and events that celebrate birds and foster scientific curiosity.
           </p>
         </div>
+        <img src="bird1.webp" class="max-w-xs rounded-lg slideInLeft" />
       </div>
     </div>
 
-    <div class="hero bg-base-100" style="min-height: 60vh;">
+    <div class="hero bg-base-100" style="min-height: 75vh;">
       <div class="hero-content flex-col lg:flex-row animate__animated animate__zoomInDown" style="justify-content: space-around; width: 100%; text-align:center;">
-        <div>
+        <img src="bird2.webp" class="max-w-xs rounded-lg slideInRight" />
+        <div class="slideInLeft">
           <h1 class="text-5xl font-bold">Why Support the JBS</h1>
           <p class="py-6">The Junior Birding Society plays a key role in bridging the gap between the youth and birding. A study in the prestigious journal Nature titled, “Initial Involvement into birding: triggers, gender, and decade effects-a mixed-methods study” analyzed statistics regarding the ages of birders. Birders typically begin bird watching at the age of 23, with an average age of 46 among avid birders. Our goal is to make birding more accessible to elementary and middle school students by breaking down the walls that make birding so inaccessible: a steep learning curve and a lack of exposure. We plan to use resources such as Merlin and eBird to increase the accessibility and engagement in birding. Through our outreach programs and events, we are trying to give students the opportunity to see the world through the lens of both a birder and a scientist.
             <br><br>
@@ -75,7 +79,7 @@
 
 
     
-    <div class="hero min-h-screen bg-base-100 pt-16">
+    <div class="hero min-h-screen bg-base-100 pt-16" id="events">
       <div class="hero-content text-center">
         <div>
           <h1 class="text-5xl font-bold">What We Do</h1><br>
@@ -136,7 +140,7 @@
       </div>
     </div>
 
-    <div class="hero bg-base-100 pt-16" id="sponsors"  style="min-height: 60vh;">
+    <div class="hero bg-base-100 pt-16" id="sponsors"  style="min-height: 75vh;">
       <div class="hero-content text-center">
         <div>
           <h1 class="text-5xl font-bold">Sponsors</h1><br>
@@ -213,14 +217,14 @@
       </div>
     </div>
 
-    <div class="hero bg-base-100 pt-16" id="contact"  style="min-height: 60vh;">
+    <div class="hero bg-base-100 pt-16" id="contact"  style="min-height: 75vh;">
       <div class="hero-content text-center">
-        <div>
+        <div class="slideInRight">
           <h1 class="text-5xl font-bold">Become a member!</h1>
           <p class="text-md py-6">It is completely free to become a member of the Junior Birding Society! By removing the financial barrier surrounding birding, we ensure that every student, regardless of their financial situation, has an equal opportunity to pursue birding. We believe that every student should have the chance to chase their passions. As a member, you can get access to exclusive birding opportunities and events. Join us as a member of the JBS!
           </p>
           <div class="flex flex-col lg:flex-row justify-center items-center gap-4">
-            <button class="btn btn-neutral" onclick="member_form.showModal()">Become a Member</button>
+            <button class="btn btn-primary" onclick="member_form.showModal()">Become a Member</button>
             <dialog id="member_form" class="modal">
               <form method="dialog" class="modal-box">
                 <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
@@ -233,10 +237,11 @@
             </dialog>
           </div>
         </div>
+        <img src="bird3.webp" class="max-w-xs rounded-lg slideInLeft" />
       </div>
     </div>
 
-    <div class="hero bg-base-100 pt-16" id="contact"  style="min-height: 60vh;">
+    <div class="hero bg-base-100 pt-16" id="contact"  style="min-height: 75vh;">
       <div class="hero-content text-center">
         <div>
           <h1 class="text-5xl font-bold">Contact</h1>
