--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <ul class="menu menu-horizontal px-1">
         <li><a href="#info" onclick="lenis.scrollTo('#info')">Info</a></li>
         <li><a href="#events" onclick="lenis.scrollTo('#events')">Events</a></li>
-        <li><a href="#schedule" onclick="lenis.scrollTo('#sponsors')">Sponsors</a></li>
+        <li><a href="#sponsors" onclick="lenis.scrollTo('#sponsors')">Sponsors</a></li>
         <li><a href="#about" onclick="lenis.scrollTo('#about')">About</a></li>
         <li><a href="#contact" onclick="lenis.scrollTo('#contact')">Contact</a></li>
       </ul>
