--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dracula">
+<html lang="en" data-theme="emerald">
 
 <head>
     <!-- copyright attributions -->
@@ -41,7 +41,7 @@
   
     <div class="hero min-h-screen bg-base-100">
       <div class="hero-content flex-col lg:flex-row animate__animated animate__zoomInDown" style="justify-content: space-around; width: 100%;">
-        <img src="logo_dark.png" class="max-w-xs rounded-lg" />
+        <img src="logo.png" class="max-w-xs rounded-lg" />
         <div class="max-w-lg">
           <h1 class="text-5xl font-bold">Junior Birding Society</h1>
           <p class="py-6">Where Young Minds Take Flight
