--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.16/bundled/lenis.min.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css?v=2" />
 </head>
 
 <body>
@@ -84,7 +84,7 @@
           <h1 class="text-5xl font-bold">What We Do</h1><br>
           <p>We host a variety of different events to get as many people interested in birding as possible.</p>
           <br>
-          <div class=" grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4" style="text-align: left; width: 125vh;">
+          <div class=" grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4" style="text-align: left;">
             <div class="card container bg-base-200 shadow-xl" style="width: 45vh;">
               <figure class="fillbg figure2" style="background-image: url('https://s3.amazonaws.com/visit-pittsburgh/CMS/National-Aviary_Flock-of-American-Flamingos-in-Wetlands_2022_Elliott-Cramer.jpg')"></figure>
               <div class="card-body">
