fix audubon logo

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <div class="hero-content text-center">
         <div>
           <h1 class="text-5xl font-bold">Sponsors and Partners</h1><br>
-          <br><br><p class="text-3xl font-bold flex gap-8">Partnered with the <img style="height: 40px;" src="http://www.aswp.org/assets/logotype-9a20b5b081b0610845f19a0aefb79bc00a1158ed1e8187c71d7dc9f72abe48d7.svg"></p>
+          <br><br><p class="text-3xl font-bold flex gap-8">Partnered with the <img style="height: 40px;" src="audubon.svg"></p>
         </div>
       </div>
     </div>
