--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
         <img src="logo.png" class="max-w-xs rounded-lg" />
         <div class="max-w-lg">
           <h1 class="text-5xl font-bold">Junior Birding Society</h1>
-          <p class="py-6">Where Young Minds Take Flight
+          <p class="pt-4">Where Young Minds Take Flight
           </p>
-          <a href="#info" onclick="lenis.scrollTo('#info')"><button class="btn btn-secondary">Learn More</button></a>
-          <button class="btn btn-primary" onclick="member_form.showModal()">Become a Member</button>
+          <small class="py-6" class="margin-bottom: 6px !important;"><i>We are a fiscally sponsored 501(c)(3) certified organization. We also have PVSA certification. </i></small>
+          <a class="mt-4" href="#info" onclick="lenis.scrollTo('#info')"><button class="btn btn-secondary">Learn More</button></a>
+          <button class="btn btn-primary mt-4" onclick="member_form.showModal()">Become a Member</button>
         </div>
       </div>
     </div>
@@ -80,7 +81,15 @@
       <div class="hero-content text-center">
         <div>
           <h1 class="text-5xl font-bold">Sponsors and Partners</h1><br>
-          <br><br><p class="text-3xl font-bold flex gap-8">Partnered with the <img style="height: 40px;" src="audubon.svg"></p>
+          <br><br><p class="text-3xl font-bold flex gap-8 flex" style="align-items: center;">Partnered with the <img style="height: 40px;" src="audubon.svg"> <svg preserveAspectRatio="xMidYMid meet" data-bbox="110.087 24.329 279.825 448.624" viewBox="0 0 500 500" height="100" width="100" xmlns="http://www.w3.org/2000/svg" data-type="ugc" role="presentation" aria-hidden="true" aria-labelledby="comp-jruox28v-svgtitle_comp-jruox28v"><title id="comp-jruox28v-svgtitle_comp-jruox28v"></title>
+            <g>
+                <path d="M-32.424 20.244a.27.27 0 0 1 .018-.095l15.288-40.615a.982.982 0 0 1 1.833-.01l14.75 37.95a.46.46 0 0 0 .86-.009l13.783-37.91a.972.972 0 0 1 1.818-.02l16.498 40.709v.252c0 .084-.032.159-.078.185-.047.026-.098-.003-.126-.072l-16.596-40.01c-.1-.255-1.138-.242-1.232.015L.604 18.29a.768.768 0 0 1-1.436.016l-14.752-37.71a.667.667 0 0 0-1.244.007l-15.336 40.412a.134.134 0 0 1-.26-.047z" transform="matrix(2.43 0 0 1.4 250 168.17)" stroke="#000000" stroke-width="10" fill="#000000"></path>
+                <path d="M250.481 24.33c76.845 0 139.212 62.367 139.212 139.212 0 52.283-26.515 105.516-69.173 129.313-4.923 2.746-7.872 29.416-7.872 29.416s4.074-24.64 7.872-29.416c9.635-12.113 28.028-19.66 45.335-44.558 19.67-28.3 21.928-58.844 23.838-84.755 4.254-57.699-53.722-138.94-139.212-139.212-94.52-.3-149.264 71.24-139.212 139.212.07.472.061.454.1.676a.059.059 0 0 1-.11.038c-.108-.209 0 .039.01-.714C112.63 63.426 173.636 24.33 250.481 24.33z" stroke="#000000" stroke-width="30.45" fill="#000000"></path>
+                <path d="M244.274 325.972a249.798 249.798 0 0 0 37.534-23.378l37.17-30.676 4.217 81.913a11.406 11.406 0 0 1-3 8.333 11.549 11.549 0 0 1-8.082 3.717l-110.934 4.034c-4.881.177-9.23-3.041-10.456-7.739-1.226-4.698 1-9.611 5.353-11.814z" fill="#000000"></path>
+                <path d="M242.759 472.953c-12.408 0-23.043-8.806-25.271-20.927l-9.599-52.208a10.02 10.02 0 0 1 9.854-11.831h83.113a8.56 8.56 0 0 1 8.381 10.302l-12.311 59.236c-1.867 8.983-9.833 15.428-19.071 15.428z" fill="#000000"></path>
+                <path d="m318.904 287.204 48.21-12.467-12.103 14.794c-9.523 8.359-17.82 21.466-21.253 32.725l-10.608 36.589z" fill="#000000"></path>
+            </g>
+        </svg></p> 
         </div>
       </div>
     </div>
