--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
 
     <main class="hero">
-        <img src="hero.gif">
+        <img src="logo.png">
         <div>
           <h1 class="big">Junior Birding Society</h1>
           <h2>Where Young Minds Take Flight</h2>
