adjust the logo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
 
     <main class="hero">
-        <img src="logo.png">
+        <img src="logo.png" style="width: 300px; height: 300px; margin-top: 6rem;">
         <div>
           <h1 class="big">Junior Birding Society</h1>
           <h2>Where Young Minds Take Flight</h2>
