--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 </head>
 
 <body>
+  <div id="money-overlay">
+    <h1 style="font-size: 10rem;">GIVE US MONEY</h1>
+    <a href="https://link.jrbirding.org/donate"><button style="font-size: 6rem;" class="noorange">CLICK TO DONATE</button></a>
+  </div>
   <div id="hero-splash"></div>
     <nav>
       <div>
